syntax = "proto3";

package pb;

service Greeter{
    rpc SayHello(HelloRequest) returns (HelloReply){}
    rpc ListHello(HelloRequest) returns(stream HelloReply){}
    rpc RecordHello(stream HelloRequest) returns(HelloReply){}
    rpc ChatHello(stream HelloRequest) returns(stream HelloReply){}
}

message HelloRequest{
    bytes name = 1;
}

message HelloReply{
    bytes message = 1;
}
